# agent-resources

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  README.md  android-layouts-handover.md  architecture.md  conftest.py  index.md  justfile  modern-git-aliases.md  modern-git-patterns.md  modern-git-reference.md  skill-provenance-patterns.md  skills-lock.json  validation-quirks.md
.crosslink/: hook-config.json
checkpoint/: state.json
docs/: THIRD_PARTY_LICENSES.md  (+9 more)
security_layer/: __init__.py  classifier.py  hitl.py  incident.py  models.py  output_validation.py  permissions.py  pii.py  pyproject.toml  scanning.py  state_machine.py  trifecta.py
security_layer/.hypothesis/constants/: 032f7d6d1facfccc  046eeb8a6278fc61  1c3f6035f93aa94b  230ed85c76c4cfe2  2de6787d7207f4bc  595a1040196b055b  5bbd3b915eeb426d  97332f2d41f906a3  a7365ed9f1f238ac  b3b2ddb5d9f1e90e  bca0766154c822da  cf070dc80b201669  e6b61135e59583b1  f08f8878aa801a14  f0ea5173730e2f7a
security_layer/.hypothesis/examples/04e6b3400353b141/: 2aed3401cf6250a5  5bcfc9035e47a435
security_layer/.hypothesis/examples/2aed3401cf6250a5/: 04ab9c04f1370523  051bfe5f103aff74  0d502bcd83f7cdb5  0eb111ef7a8ada21  12c5b508b4b1c6da  13d7e9e9192796d0  191875adbdd0b6a9  25a7034110189640  4d09507a2476c484  4f3cab46ca948980  549c7de0b11f4aa8  6846d1b2c79c1f6b  6c65f4676aaf0c91  6ca9d9f69c80d58f  6cffa3606f513ab3  71da7bf55cef65d5  73738f9844dc1a35  74290e6fb3721e60  7818ac70a694a2b6  78f2b968d51abc00  83c05469525af7e1  853681381874bc9c  86497c4cb804e6b3  8d76019ffd07d25f  95a6cbfa8176f79d  97032b18b8510bf4  9e040880644a3002  a2650ba41ca92771  a6823d3a0d2b5b3f  a6a05dce18ecf588  a6c119e8dc4d1df1  aeb50df10ad9dcf9  aec08a927e4dc215  b2b8d8e5dfff7566  b5a32b37fbb7e160  c3251ddb2ae31273  c4c04d764604b511  c69ac558889fc933  cfeea085d79b2c02  e7ff085f80ee2da3  (+2 more)
security_layer/.hypothesis/examples/5bcfc9035e47a435/: 6473b942f2004266
security_layer/mutants/: __init__.py  budget.py  classifier.py  hitl.py  incident.py  models.py  output_validation.py  permissions.py  pii.py  pyproject.toml  scanning.py  state_machine.py  trifecta.py
security_layer/mutants/mutants/: __init__.py  budget.py  models.py  permissions.py  state_machine.py  trifecta.py
security_layer/mutants/mutants/mutants/: __init__.py  hitl.py  models.py  state_machine.py
security_layer/mutants/mutants/mutants/mutants/: classifier.py
security_layer/mutants/mutants/mutants/mutants/mutants/: models.py  pyproject.toml
security_layer/mutants/mutants/mutants/mutants/mutants/mutants/mutants/mutants/mutants/: state_machine.py
security_layer/mutants/mutants/mutants/mutants/mutants/mutants/mutants/mutants/mutants/mutants/: models.py  permissions.py  scanning.py
skills/scripts/: .jscpd.json  config.yaml  pyproject.toml  skill-manager  sync-index.py  test_sync_index.py
skills/scripts/providers/: common.sh  npx-skills.sh
skills/scripts/tests/: test_sync_index.py
(+117 files in other folders)
