[project]
name = "security-layer"
version = "0.1.0"
description = "LLM agent security mitigation layer — trifecta separation, PII detection, input classification, output validation, least privilege, rate limiting, HITL, incident response"
requires-python = ">=3.12, <3.14"
license = "AGPL-3.0-only"
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.8.0",
    "basedpyright>=1.28.0",
    "mutmut>=3.5.0",
]

[tool.uv]
required-version = ">=0.6"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "SIM", "C4", "TCH", "RUF", "PERF", "PGH", "S",
]
ignore = ["S603"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportUnusedImport = "error"
reportUnusedVariable = "error"

[tool.pytest.ini_options]
testpaths = ["../tests"]

[tool.mutmut]
paths_to_mutate = "budget.py,hitl.py,incident.py,models.py,output_validation.py,permissions.py,state_machine.py,trifecta.py"
runner = "uv run pytest ../tests/ -x -q --tb=line -k 'not pii_detection and not pii_doc'"
